<resources>
    <string name="app_name">GameCenter</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="instruction">Welcome Users, please proceed to login or sign up before venturing into the game</string>
    <string name="sign_up">sign up</string>
    <string name="login">login</string>
    <string name="starting_activity">starting Activity</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sliding_tiles">Sliding Tiles</string>
    <string name="logout">Logout</string>
    <string name="score_board">Score Board</string>
    <string name="save_files">Saved Files</string>
    <string name="save_1">Saved game 1</string>
    <string name="save_2">Saved game 2</string>
    <string name="save_3">Saved game 3</string>
    <string name="Load_saves">Load Saved Games</string>
    <string name="load_game_1">Load Game 1</string>
    <string name="load_game_2">Load Game 2</string>
    <string name="load_game_3">Load Game 3</string>
    <string name="introduction">Welcome To Sliding Tiles   A Puzzle Game where you must arrange the numbers in the correct order</string>
    <string name="new_game">New Game</string>
    <string name="load_game">Load Game</string>
    <string name="save_game">Save Game</string>
    <string name="load_auto_save">Load Auto Save</string>
    <string name="calculator_game">Calculator Game</string>
    <string name="easy">Easy</string>
    <string name="hard">hard</string>
    <string name="nightmare">Nightmare</string>
    <string name="goalValue">Your Goal Value:</string>
    <string name="reverse">Reverse</string>
    <string name="moves">moves left：</string>
    <string name="you_won">You Won!!!</string>
    <string name="play_again">Play again</string>
    <string name="return_to_menu">Return to Menu</string>
    <string name="clear">Clear</string>
    <string name="home">home</string>
    <string name="time">Time:</string>
    <string name="retry">Retry</string>
    <string name="game_center">game center</string>
    <string name="calculator">Calculator</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="back">Back</string>
    <string name="try_again">Try Again</string>
    <string name="easy2048">EASY</string>
    <string name="nightmare2048">NIGHTMARE</string>
    <string name="hard2048">HARD</string>
</resources>
