<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">
    <TextView
        android:id="@+id/LoadFile_2048"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/Load_saves" />

    <Button
        android:id="@+id/Load_auto_2048"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/load_auto_save" />

    <Button
        android:id="@+id/load_1_2048"
        android:text="@string/load_game_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/load_2_2048"
        android:text="@string/load_game_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/load_3_2048"
        android:text="@string/load_game_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>