<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="fall2018.csc207.project.gamecenter.slidingtiles.StartingActivity">

    <Button
        android:id="@+id/level3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="147dp"
        android:layout_marginBottom="263dp"
        android:text="3X3" />

    <Button
        android:id="@+id/level5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="150dp"
        android:layout_marginBottom="113dp"
        android:text="5X5" />

    <Button
        android:id="@+id/level4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="146dp"
        android:layout_marginBottom="192dp"
        android:text="4X4" />

    <TextView
        android:id="@+id/GameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="205dp"
        android:gravity="center"
        android:text="@string/introduction"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    <Button
        android:id="@+id/LoadButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/StartingAct_LogoutBtn"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="-48dp"
        android:text="@string/load_game" />

    <Button
        android:id="@+id/scoreboardBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="50dp"
        android:text="@string/score_board" />

    <Button
        android:id="@+id/StartingAct_LogoutBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="0dp"
        android:text="@string/logout" />

    <TextView
        android:id="@+id/username_startingTV"
        android:layout_width="84dp"
        android:layout_height="37dp"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="9dp"
        android:layout_toStartOf="@+id/StartingAct_LogoutBtn"
        android:gravity="center"
        android:textSize="20sp" />

    <Button
        android:id="@+id/backbtn_sT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="50dp"
        android:text="@string/back" />

</RelativeLayout>