<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".GameCenterActivity">

    <Button
        android:id="@+id/game2048_button"
        android:layout_width="294dp"
        android:layout_height="64dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="36dp"
        android:background="#efe8ef"
        android:text="2048"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SlidingTile_button" />

    <Button
        android:id="@+id/gameCenter_Calculator"
        android:layout_width="294dp"
        android:layout_height="64dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="40dp"
        android:background="#efe8ef"
        android:text="@string/calculator"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game2048_button" />

    <Button
        android:id="@+id/SlidingTile_button"
        android:layout_width="294dp"
        android:layout_height="64dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="68dp"
        android:background="#efe8ef"
        android:text="@string/sliding_tiles"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GameCenter_text" />

    <TextView
        android:id="@+id/GameCenter_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:gravity="center"
        android:fontFamily="sans-serif"
        android:text="@string/game_center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Logout_Button"
        android:layout_width="87dp"
        android:layout_height="38dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="#efe8ef"
        android:text= "@string/logout"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/UserName_TV"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_width="86dp"
        android:layout_height="31dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Logout_Button" />

</android.support.constraint.ConstraintLayout>